<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



<!--    TextView-->
<com.google.android.material.textview.MaterialTextView
    android:id="@+id/e1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?textAppearanceHeadline5"
    android:text="@string/headline"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="20dp"
    />
<!--    Divider-->
    <View
        android:layout_below="@+id/e1"
        android:id="@+id/e2"
        style="@style/Divider"
        />
<!--    Text View-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e3"
        android:layout_below="@+id/e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?textAppearanceHeadline6"
        android:text="@string/top_coverage"
        />

<!--    ImageView-->

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"

        />

    <!--    Wapo Logo   -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/e4"
        android:layout_below="@+id/e3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_the_logo_of_the_washington_post_newspaper"
        android:layout_marginLeft="10dp"
        />



<!--    text view-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e6"
        android:layout_below="@+id/e4"
        android:text="@string/articleTitle1"
        android:textAppearance="?textAppearanceHeadline6"
        android:layout_marginLeft="10dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

<!--    text view / icon-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e16"
        android:layout_below="@+id/e6"
        style="@style/timePosted"
        android:text="@string/postingTime1"
        android:textAppearance="?textAppearanceCaption"

        />

<!--    divider-->
    <View
        android:id="@+id/e17"
        android:layout_below="@+id/e16"
        style="@style/Divider"

        />

<!--    icon/text view-->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/e18"
        android:layout_below="@+id/e17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cbs_news"
        android:layout_marginLeft="10dp"
        />

<!--    text view / image-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e19"
        android:layout_below="@+id/e18"
        android:text="@string/articleTitle2"
        android:textAppearance="?textAppearanceBody1"
        android:layout_marginLeft="10dp"

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        />

<!--    text view / icon-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e20"
        android:layout_below="@+id/e19"
        style="@style/timePosted"
        android:text="@string/postingTime2"
        android:textAppearance="?textAppearanceCaption"

        />

<!--    divider-->
    <View
        android:id="@+id/e21"
        android:layout_below="@+id/e20"
        style="@style/Divider"

        />

<!--    icon/text view-->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/e22"
        android:layout_below="@+id/e21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cnn"
        android:layout_marginLeft="10dp"
        />

<!--    text view / image-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e23"
        android:layout_below="@+id/e22"
        android:text="@string/articleTitle3"
        android:textAppearance="?textAppearanceBody1"
        android:layout_marginLeft="10dp"

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        />

<!--    text view / icon-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/e24"
        android:layout_below="@+id/e23"
        style="@style/timePosted"
        android:text="@string/postingTime3"
        android:textAppearance="?textAppearanceCaption"


        />



</RelativeLayout>